manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchard-service
spec:
  selector:
    app: orchard-cms
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
  sessionAffinity: None
